--- a/hub/repository.yaml
+++ b/hub/repository.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   interval: 1m0s
   ref:
-    branch: changed
+    branch: staging
   secretRef:
     name: flux-system
   url: ssh://git@github.com/wprzechrzta/flux2-hub-spoke
