--- a/hub/staging.yaml
+++ b/hub/staging.yaml
@@ -17,7 +17,7 @@ spec:
   path: ./clusters/staging/tenants
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: staging
     namespace: flux-system
   kubeConfig:
     secretRef:
@@ -75,7 +75,7 @@ spec:
   path: ./clusters/staging/infra-configs
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: staging
     namespace: flux-system
   kubeConfig:
     secretRef:
@@ -98,7 +98,7 @@ spec:
   path: ./clusters/staging/apps
   sourceRef:
     kind: GitRepository
-    name: flux-system
+    name: staging
     namespace: flux-system
   patches:
     - target:
